# nd1-capstone-team4

./: .env.example  .gitignore  Dockerfile  README_capstone.md  STRUCTURE.md  docker-compose.wslg.yml  docker-compose.yml
foxglove/: nd1_capstone_layout.json
m7_ik/: README.md  setup.py
m7_ik/nd1_m7_ik/: __init__.py  arm.py  ik.py  jacobian.py
m7_ik/nd1_m7_ik.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
m7_ik/tests/: smoke.py
scripts/: smoke_test.py
workspace/nd1_capstone/: package.xml  setup.cfg  setup.py
workspace/nd1_capstone/launch/: bringup.launch.py  spawn_boxes.launch.py
workspace/nd1_capstone/models/: box1.sdf
workspace/nd1_capstone/nd1_capstone/: coordinator_fsm.py  linear_orchestrator.py  llm_planner.py  node_a_llm.py  node_b_nav.py  node_c_grasp.py
workspace/nd1_capstone/scripts/: fix_controller_update_rate.sh  launch_sim_patched.sh  reload_controllers.sh
